[package]
name = "panda"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.3"
clap = { version = "4.4.3", features = ["derive"] }
hashbrown = "0.14.0"
num-bigint = "0.4.4"
num-traits = "0.2.16"
strum = { version = "0.25.0", features = ["derive"] }
whoami = { version = "1.4.1", default-features = false }

[dev-dependencies]
pretty_assertions = "1.4.0"

[profile.release]
lto = true
