[package]
name = "panda"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.3"
clap = { version = "4.4.3", features = ["derive"] }
num_enum = "0.7.2"
strum = { version = "0.25.0", features = ["derive"] }
whoami = { version = "1.4.1", default-features = false }

[dev-dependencies]
pretty_assertions = "1.4.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lints.clippy]
pedantic = "warn"
nursery = "warn"
